All instances 'bill_no'-->'item_code'

--- a/app/core/templates/core/chemshortages.html
+++ b/app/core/templates/core/chemshortages.html
@@ -31,7 +31,7 @@
                 {% for item in chems_used_upcoming %}
                     {% if item.oh_minus_required < 0 and item.component_itemcode != "030143" %}
                     <tr>
-                        <td style="vertical-align: middle;">{{ item.bill_no }}</td>
+                        <td style="vertical-align: middle;">{{ item.item_code }}</td>
                         <td style="vertical-align: middle;">{{ item.bill_desc }}</td>
                         <td style="vertical-align: middle;">{{ item.blend_req_threewk|floatformat:0 }} gal</td>
                         <td style="vertical-align: middle;">{{ item.component_itemcode }}</td>
@@ -81,7 +81,7 @@
                 {% for item in current_page.object_list %}
                     {% if item.component_itemcode != "030143" %}
                     <tr>
-                        <td style="vertical-align: middle;">{{ item.bill_no }}</td>
+                        <td style="vertical-align: middle;">{{ item.item_code }}</td>
                         <td style="vertical-align: middle;">{{ item.bill_desc }}</td>
                         <td style="vertical-align: middle;">{{ item.blend_req_threewk|floatformat:0 }} gal</td>
                         <td style="vertical-align: middle;">{{ item.component_itemcode }}</td>
