--- a/app/core/templates/core/productionblendruns.html
+++ b/app/core/templates/core/productionblendruns.html
@@ -27,7 +27,7 @@
             </thead>
             {% for item in current_page.object_list %}
                 <tr>
-                    <td>{{ item.bill_no }}</td>
+                    <td>{{ item.item_code }}</td>
                     <td>
                         <span title="{{ item.ingredients_list }}">
                             <div class="dropdown">
