--- a/app/core/templates/core/reports/whereusedreport.html
+++ b/app/core/templates/core/reports/whereusedreport.html
@@ -15,7 +15,7 @@
         </thead>
         {% for item in all_bills_where_used %}
             <tr>
-                <td>{{ item.bill_no }}</td>
+                <td>{{ item.item_code }}</td>
                 <td>{{ item.bill_desc }}</td>
                 <td>{{ item.qtyperbill }}</td>
             </tr>
