All instances 'blend_pn'->'component_item_code'

--- a/app/core/templates/core/blendschedules/desktwoschedule.html
+++ b/app/core/templates/core/blendschedules/desktwoschedule.html
@@ -27,7 +27,7 @@
             </thead>
             {% for item in desk_two_blends %}
                 <tr>
-                    <td>{{ item.blend_pn }}</td>
+                    <td>{{ item.component_item_code }}</td>
                     <td>{{ item.description }}</td>
                     <td>{{ item.lot }}</td>
                     <td>{{ item.quantity|floatformat:1 }} gal</td>
