--- a/app/core/templates/core/issuesheets.html
+++ b/app/core/templates/core/issuesheets.html
@@ -32,7 +32,7 @@
                 <div class='headercontainer'>
                     <div>PRODUCT: </div>
                     <div class="widener">
-                        <div>&emsp;{{ item.blend_pn }}&emsp;&emsp;&emsp;&emsp;{{ item.blend_desc }}</div>
+                        <div>&emsp;{{ item.component_item_code }}&emsp;&emsp;&emsp;&emsp;{{ item.blend_desc }}</div>
                     </div>
                 </div>
             </div>
