--- a/app/core/templates/core/batchissuetable.html
+++ b/app/core/templates/core/batchissuetable.html
@@ -25,7 +25,7 @@
             {% for run in prod_runs_this_line %}
                 <tr>
                     <td>{{ run.item_code }}</td>
-                    <td>{{ run.blend_pn }}</td>
+                    <td>{{ run.component_item_code }}</td>
                     <td>{{ run.blend_desc }}</td>
                     <td>{{ run.adjustedrunqty|floatformat:2 }}</td>
                     <td>{{ run.starttime|floatformat:5 }}</td>
