--- a/app/core/templates/core/blendschedules/allschedules.html
+++ b/app/core/templates/core/blendschedules/allschedules.html
@@ -220,7 +220,7 @@
                     </thead>
                     {% for item in desk_one_blends %}
                         <tr>
-                            <td>{{ item.blend_pn }}</td>
+                            <td>{{ item.component_item_code }}</td>
                             <td>{{ item.description }}</td>
                             <td>{{ item.lot }}</td>
                             <td>{{ item.quantity|floatformat:1 }} gal</td>
@@ -282,7 +282,7 @@
                     </thead>
                     {% for item in desk_two_blends %}
                         <tr>
-                            <td>{{ item.blend_pn }}</td>
+                            <td>{{ item.component_item_code }}</td>
                             <td>{{ item.description }}</td>
                             <td>{{ item.lot }}</td>
                             <td>{{ item.quantity|floatformat:1 }} gal</td>
