--- a/app/core/templates/core/productionblendruns.html
+++ b/app/core/templates/core/productionblendruns.html
@@ -35,20 +35,20 @@
                                     <i class="fa fa-info-circle"></i>
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                    <li><a class="dropdown-item" href="/core/reports/Lot-Numbers/{{ item.blend_pn }}">
+                                    <li><a class="dropdown-item" href="/core/reports/Lot-Numbers/{{ item.component_item_code }}">
                                         Lot Numbers
                                     </a></li>
-                                    <li><a class="dropdown-item" href="/core/reports/Transaction-History/{{ item.blend_pn }}">
+                                    <li><a class="dropdown-item" href="/core/reports/Transaction-History/{{ item.component_item_code }}">
                                         Transaction History
                                     </a></li>
-                                    <li><a class="dropdown-item" href="/core/reports/All-Upcoming-Runs/{{ item.blend_pn }}">
+                                    <li><a class="dropdown-item" href="/core/reports/All-Upcoming-Runs/{{ item.component_item_code }}">
                                         Upcoming Runs
                                     </a></li>
-                                    <li><a class="dropdown-item" href="/core/reports/Count-History/{{ item.blend_pn }}">
+                                    <li><a class="dropdown-item" href="/core/reports/Count-History/{{ item.component_item_code }}">
                                         Count History
                                     </a></li>
                                 </ul>
-                                {{ item.blend_pn }}
+                                {{ item.component_item_code }}
                             </div>
                         </span>
                     </td>
