--- a/app/core/templates/core/reports/whereusedreport.html
+++ b/app/core/templates/core/reports/whereusedreport.html
@@ -16,7 +16,7 @@
         {% for item in all_bills_where_used %}
             <tr>
                 <td>{{ item.item_code }}</td>
-                <td>{{ item.bill_desc }}</td>
+                <td>{{ item.item_description }}</td>
                 <td>{{ item.qtyperbill }}</td>
             </tr>
         {% endfor %}
