--- a/app/core/templates/core/reports/chemshortagereport.html
+++ b/app/core/templates/core/reports/chemshortagereport.html
@@ -31,7 +31,7 @@
                 <tr>
                     {% if item.chem_oh_after_run < 0 %}
                             <td style="background-color:rgb(250, 189, 109)">{{ item.component_item_code }}</td>
-                            <td style="background-color:rgb(250, 189, 109)">{{ item.blend_desc }}</td>
+                            <td style="background-color:rgb(250, 189, 109)">{{ item.component_item_description }}</td>
                             <td style="background-color:rgb(250, 189, 109)">{{ item.starttime|floatformat:2 }}</td>
                             <td style="background-color:rgb(250, 189, 109)">{{ item.prodline }}</td>
                             <td style="background-color:rgb(250, 189, 109)">{{ item.week_calc }}</td>
@@ -42,7 +42,7 @@
                             <td style="background-color:rgb(250, 189, 109)">{{ item.chem_oh_after_run|floatformat:2 }}</td>
                         {% else %}
                             <td>{{ item.component_item_code }}</td>
-                            <td>{{ item.blend_desc }}</td>
+                            <td>{{ item.component_item_description }}</td>
                             <td>{{ item.starttime|floatformat:2 }}</td>
                             <td>{{ item.prodline }}</td>
                             <td>{{ item.week_calc }}</td>
