--- a/app/core/templates/core/reports/startronreport.html
+++ b/app/core/templates/core/reports/startronreport.html
@@ -21,7 +21,7 @@
                 <tr>
                     {% if item.oh_after_run < 0 %}
                         <td style="background-color:#FE620E">{{ run.component_item_code }}</td>
-                        <td style="background-color:#FE620E">{{ run.blend_desc }}</td>
+                        <td style="background-color:#FE620E">{{ run.component_item_description }}</td>
                         <td style="background-color:#FE620E">{{ run.adjustedrunqty|floatformat:2 }}</td>
                         <td style="background-color:#FE620E">{{ run.qtyonhand|floatformat:2 }}</td>
                         <td style="background-color:#FE620E">{{ run.starttime|floatformat:2 }}</td>
@@ -29,7 +29,7 @@
                         <td style="background-color:#FE620E">{{ run.oh_after_run|floatformat:2 }}</td>
                     {% else %}
                         <td>{{ run.component_item_code }}</td>
-                        <td>{{ run.blend_desc }}</td>
+                        <td>{{ run.component_item_description }}</td>
                         <td>{{ run.adjustedrunqty|floatformat:2 }}</td>
                         <td>{{ run.qtyonhand|floatformat:2 }}</td>
                         <td>{{ run.starttime|floatformat:2 }}</td>
