--- a/app/core/templates/core/reports/upcomingrunsreport.html
+++ b/app/core/templates/core/reports/upcomingrunsreport.html
@@ -26,7 +26,7 @@
                 {% for item in upcoming_runs %}
                     <tr>
                         <td>{{ item.component_item_code }}</td>
-                        <td>{{ item.blend_desc }}</td>
+                        <td>{{ item.component_item_description }}</td>
                         <td>{{ item.adjustedrunqty|floatformat:2 }}</td>
                         <td>{{ item.qtyonhand|floatformat:2 }}</td>
                         <td>{{ item.starttime|floatformat:2 }}</td>
