--- a/app/prodverse/templates/prodverse/batchissuetable.html
+++ b/app/prodverse/templates/prodverse/batchissuetable.html
@@ -25,7 +25,7 @@
                 <tr>
                     <td>{{ run.item_code }}</td>
                     <td>{{ run.component_item_code }}</td>
-                    <td>{{ run.blend_desc }}</td>
+                    <td>{{ run.component_item_description }}</td>
                     <td>{{ run.adjustedrunqty|floatformat:2 }}</td>
                     <td>{{ run.starttime|floatformat:5 }}</td>
                     <td>{% if run.batchnum1 == "n/a" %} - {% else %} <b>{{ run.batchnum1 }}</b>: {{ run.batchqty1 }} gal<br>{% endif %}
