--- a/app/core/templates/core/productionblendruns.html
+++ b/app/core/templates/core/productionblendruns.html
@@ -52,7 +52,7 @@
                             </div>
                         </span>
                     </td>
-                    <td>{{ item.blend_desc }}</td>
+                    <td>{{ item.component_item_description }}</td>
                     <td>{{ item.adjustedrunqty|floatformat:2 }}</td>
                     <td>{{ item.qtyonhand|floatformat:2 }}</td>
                     <td>{{ item.starttime|floatformat:2 }}</td>
