'part_number'->'item_code' OR 'component_item_code'

--- a/app/core/templates/core/blendsheet.html
+++ b/app/core/templates/core/blendsheet.html
@@ -8,7 +8,7 @@
 <table id="headerinfotable">
     <tr>
         <td><h2>Starbrite Master Formula</h2></td>
-        <td><h2>{{ this_lot.part_number }}: {{ this_lot.description }}</h2></td>
+        <td><h2>{{ this_lot.item_code }}: {{ this_lot.description }}</h2></td>
         <td><h4>Lbs./Gallon: {{ first_step.lbs_per_gal }}</h4></td>
     </tr>
     <tr>
