--- a/app/core/templates/core/inventorycounts/upcomingblends.html
+++ b/app/core/templates/core/inventorycounts/upcomingblends.html
@@ -84,7 +84,7 @@
                 });
                 // https://stackoverflow.com/questions/4505871/good-way-to-serialize-a-list-javascript-ajax
                 let encodedPartNumbers = btoa(JSON.stringify(partNumbers));
-                let dummyList = ["No_Part_Numbers"];
+                let dummyList = ["No_Item_Codes"];
                 let encodedDummyList = btoa(JSON.stringify(dummyList));
                 // https://stackoverflow.com/questions/503093/how-do-i-redirect-to-another-webpage
                 baseURL = window.location.href.split('core')[0];
