--- a/app/core/templates/core/lookuppages/lookuplotnums.html
+++ b/app/core/templates/core/lookuppages/lookuplotnums.html
@@ -20,7 +20,7 @@
         <h1>Lookup Lot Numbers</h1>
         <br>
         <h4>Item number:</h4>
-        <input type="text" id="id_part_number" enterkeyhint="search" placeholder="Search by Item Number" style="width:300px;"></input>
+        <input type="text" id="id_item_code" enterkeyhint="search" placeholder="Search by Item Number" style="width:300px;"></input>
         <br>
         <h4>Description:</h4>
         <input type="text" id="id_description" enterkeyhint="search" placeholder="Search by Desc (min. 3 characters)" style="width:300px;"></input>
