--- a/app/core/templates/core/reportcenter.html
+++ b/app/core/templates/core/reportcenter.html
@@ -39,10 +39,10 @@
                 </tr>
                 <tr id="partNumberRow">
                     <td>
-                        <label for="id_part_number">Enter Part Number:</label>
+                        <label for="id_item_code">Enter Part Number:</label>
                     </td>
                     <td>
-                        <input type="text" name="part_number" maxlength="100" required="" id="id_part_number" class="ui-autocomplete-input" autocomplete="off">
+                        <input type="text" name="item_code" maxlength="100" required="" id="id_item_code" class="ui-autocomplete-input" autocomplete="off">
                     </td>
                 </tr>
                 <tr id="partDescriptionRow">
