--- a/app/prodverse/templates/prodverse/lookupitemqty.html
+++ b/app/prodverse/templates/prodverse/lookupitemqty.html
@@ -43,7 +43,7 @@
     <div>
         <h1>Lookup Item Info</h1>
         <h2>Item number:</h2>
-        <input type="text" id="id_part_number" placeholder="Search by Item Number" style="width:300px;" enterkeyhint="search"></input>
+        <input type="text" id="id_item_code" placeholder="Search by Item Number" style="width:300px;" enterkeyhint="search"></input>
         
         <h2>Description:</h2>
         <input type="text" id="id_description" placeholder="Search by Desc (min. 3 characters)" style="width:300px;" enterkeyhint="search"></input>
