--- a/app/core/templates/core/inventorycounts/finishedcounts.html
+++ b/app/core/templates/core/inventorycounts/finishedcounts.html
@@ -25,7 +25,7 @@
             </thead>
             {% for item in count_records_queryset %}
                 <tr>
-                    <td>{{ item.part_number }}</td>
+                    <td>{{ item.item_code }}</td>
                     <td>{{ item.part_description }}</td>
                     <td style="text-align:right;">{{ item.expected_quantity|floatformat:4 }}</td>
                     <td style="text-align:right;">{{ item.counted_quantity|floatformat:4 }}</td>
