--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -66,20 +66,20 @@
                                 <i class="fa fa-info-circle"></i>
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li><a class="dropdown-item" href="/core/reports/Lot-Numbers/{{ item.part_number }}">
+                                <li><a class="dropdown-item" href="/core/reports/Lot-Numbers/{{ item.item_code }}">
                                     Lot Numbers
                                 </a></li>
-                                <li><a class="dropdown-item" href="/core/reports/Transaction-History/{{ item.part_number }}">
+                                <li><a class="dropdown-item" href="/core/reports/Transaction-History/{{ item.item_code }}">
                                     Transaction History
                                 </a></li>
-                                <li><a class="dropdown-item" href="/core/reports/All-Upcoming-Runs/{{ item.part_number }}">
+                                <li><a class="dropdown-item" href="/core/reports/All-Upcoming-Runs/{{ item.item_code }}">
                                     Upcoming Runs
                                 </a></li>
-                                <li><a class="dropdown-item" href="/core/reports/Count-History/{{ item.part_number }}">
+                                <li><a class="dropdown-item" href="/core/reports/Count-History/{{ item.item_code }}">
                                     Count History
                                 </a></li>
                             </ul>
-                            {{ item.part_number }}
+                            {{ item.item_code }}
                         </div>
                     </td>
                     <td>{{ item.description }}</td>
@@ -111,7 +111,7 @@
                                 <div class="dropdown">
                                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Unscheduled</button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                        <li><a class="dropdown-item addToScheduleLink" data-bs-toggle="modal" data-partnum="{{ item.part_number }}" data-desc="{{ item.description }}" data-lotnum="{{ item.lot_number }}" data-lotqty="{{ item.lot_quantity }}"   data-line="{{ item.line }}" data-blendDesk="{{item.desk}}" data-bs-target="#addToScheduleModal">
+                                        <li><a class="dropdown-item addToScheduleLink" data-bs-toggle="modal" data-partnum="{{ item.item_code }}" data-desc="{{ item.description }}" data-lotnum="{{ item.lot_number }}" data-lotqty="{{ item.lot_quantity }}"   data-line="{{ item.line }}" data-blendDesk="{{item.desk}}" data-bs-target="#addToScheduleModal">
                                             Assign to {{ item.desk }}
                                         </a></li>
                                         <li><a class="dropdown-item" dataItemID="{{ item.id }}" href="/core/lotnumrecords/?edit_yesno=yes&lot_id={{ item.id }}">
@@ -129,7 +129,7 @@
                                     <i class="fas fa-edit" disabled="disabled"></i>
                                 </button>
                             </a>
-                            <button dataItemID="{{ item.id }}" style="margin-right: 5px;" type="button" class="btn btn-outline-primary duplicateBtn" data-bs-toggle="modal" data-lotqty="{{ item.lot_quantity }}" data-rundate="{{ item.run_date|date:"m/d/Y" }}" data-desc="{{ item.description }}" data-partnum="{{ item.part_number }}" data-desk="{{ item.desk }}"  data-line="{{ item.line }}" data-bs-target="#addLotNumModal">
+                            <button dataItemID="{{ item.id }}" style="margin-right: 5px;" type="button" class="btn btn-outline-primary duplicateBtn" data-bs-toggle="modal" data-lotqty="{{ item.lot_quantity }}" data-rundate="{{ item.run_date|date:"m/d/Y" }}" data-desc="{{ item.description }}" data-partnum="{{ item.item_code }}" data-desk="{{ item.desk }}"  data-line="{{ item.line }}" data-bs-target="#addLotNumModal">
                                 <i class="far fa-clone" disabled="disabled"></i>
                             </button>
                             <button dataItemID="{{ item.id }}" type="button" class="btn btn-outline-danger deleteBtn" data-bs-toggle="modal" data-bs-target="#lotNumConfirmModal">
