--- a/app/core/templates/core/reports/upcomingrunsreport.html
+++ b/app/core/templates/core/reports/upcomingrunsreport.html
@@ -8,7 +8,7 @@
         </div>
     {% else %}
         <div class='text-center'>
-            <h1>All Upcoming Runs for {{ blend_info.part_number }} {{ blend_info.desc }}</h1>
+            <h1>All Upcoming Runs for {{ blend_info.item_code }} {{ blend_info.desc }}</h1>
         </div>
         <div class="table-responsive-sm">
             <table class="table text-left table-bordered">
