'component_desc'->'item_description'

--- a/app/core/static/core/css/countlist.css
+++ b/app/core/static/core/css/countlist.css
@@ -5,7 +5,7 @@ input[name*='item_code'] {
     border: none;
 }
 
-input[name*='part_description'] {
+input[name*='item_description'] {
     width: 240px;
     height: 24px;
     background-color: transparent;
