--- a/app/core/templates/core/inventorycounts/countrecords.html
+++ b/app/core/templates/core/inventorycounts/countrecords.html
@@ -37,7 +37,7 @@
                             <input type="checkbox" name={{ item.id }} class="reportCheckBox"></input>
                         </td>
                         <td>{{ item.item_code }}</td>
-                        <td>{{ item.part_description }}</td>
+                        <td>{{ item.item_description }}</td>
                         <td>{{ item.expected_quantity|floatformat:0 }}</td>
                         <td>{{ item.counted_quantity|floatformat:0 }}</td>
                         <td>{{ item.counted_date|date:"M d, Y" }}</td>
