--- a/app/core/templates/core/reports/inventorycountsreport.html
+++ b/app/core/templates/core/reports/inventorycountsreport.html
@@ -17,7 +17,7 @@
         {% for item in blend_count_records %}
             <tr>
                 <td>{{ item.item_code }}</td>
-                <td>{{ item.part_description }}</td>
+                <td>{{ item.item_description }}</td>
                 <td>{{ item.counted_quantity|floatformat:0 }}</td>
                 <td>{{ item.counted_date }}</td>
             </tr>
