--- a/app/static/core/countlist.css
+++ b/app/static/core/countlist.css
@@ -5,7 +5,7 @@ input[name*='item_code'] {
     border: none;
 }
 
-input[name*='part_description'] {
+input[name*='item_description'] {
     width: 240px;
     height: 24px;
     background-color: transparent;
