--- a/app/core/templates/core/lookuppages/lookuplocation.html
+++ b/app/core/templates/core/lookuppages/lookuplocation.html
@@ -22,7 +22,7 @@
         <input type="text" id="id_item_code" enterkeyhint="search" placeholder="Search by Item Number" style="width:300px;"></input>
         <br>
         <h4>Description:</h4>
-        <input type="text" id="id_description" enterkeyhint="search" placeholder="Search by Desc (min. 3 characters)" style="width:300px;"></input>
+        <input type="text" id="id_item_description" enterkeyhint="search" placeholder="Search by Desc (min. 3 characters)" style="width:300px;"></input>
         <br>
         <h4>Location:</h4>
         <div id="id_location"><em>Use search fields to display chemical locations.</em></div>
