--- a/app/core/templates/core/lookuppages/lookuplotnums.html
+++ b/app/core/templates/core/lookuppages/lookuplotnums.html
@@ -23,7 +23,7 @@
         <input type="text" id="id_item_code" enterkeyhint="search" placeholder="Search by Item Number" style="width:300px;"></input>
         <br>
         <h4>Description:</h4>
-        <input type="text" id="id_description" enterkeyhint="search" placeholder="Search by Desc (min. 3 characters)" style="width:300px;"></input>
+        <input type="text" id="id_item_description" enterkeyhint="search" placeholder="Search by Desc (min. 3 characters)" style="width:300px;"></input>
         </br>
         </br>
         <a id="lotNumSearchLink"><button class="btn btn-secondary">Find Lot Numbers</button></a>
