--- a/app/core/templates/core/reports/transactionsreport.html
+++ b/app/core/templates/core/reports/transactionsreport.html
@@ -26,7 +26,7 @@
                 {% for item in transactions_list %}
                     <tr {% if item.transactionqty < 0 %}class="creditRow"{% else %}class="debitRow"{% endif %}>
                         <td>{{ item.itemcode }}</td>
-                        <td>{{ item.description }}</td>
+                        <td>{{ item.item_description }}</td>
                         <td>{{ item.transactiondate }}</td>
                         <td>
                             {% if item.transactioncode == "II" %}
