--- a/app/prodverse/templates/prodverse/lookupitemqty.html
+++ b/app/prodverse/templates/prodverse/lookupitemqty.html
@@ -46,7 +46,7 @@
         <input type="text" id="id_item_code" placeholder="Search by Item Number" style="width:300px;" enterkeyhint="search"></input>
         
         <h2>Description:</h2>
-        <input type="text" id="id_description" placeholder="Search by Desc (min. 3 characters)" style="width:300px;" enterkeyhint="search"></input>
+        <input type="text" id="id_item_description" placeholder="Search by Desc (min. 3 characters)" style="width:300px;" enterkeyhint="search"></input>
 
         <div id="itemQtyContainer">
             <h2>Qty On Hand:</h2>
