--- a/app/core/templates/core/blendschedules/desktwoschedule.html
+++ b/app/core/templates/core/blendschedules/desktwoschedule.html
@@ -28,7 +28,7 @@
             {% for item in desk_two_blends %}
                 <tr>
                     <td>{{ item.component_item_code }}</td>
-                    <td>{{ item.description }}</td>
+                    <td>{{ item.item_description }}</td>
                     <td>{{ item.lot }}</td>
                     <td>{{ item.quantity|floatformat:1 }} gal</td>
                     <td>{{ item.totes_needed|floatformat:0 }}</td>
