--- a/app/core/templates/core/reportcenter.html
+++ b/app/core/templates/core/reportcenter.html
@@ -47,10 +47,10 @@
                 </tr>
                 <tr id="partDescriptionRow">
                     <td>
-                        <label for="id_description">Enter Description:</label>
+                        <label for="id_item_description">Enter Description:</label>
                     </td>
                     <td>
-                        <input type="text" name="description" maxlength="100" required="" id="id_description" class="ui-autocomplete-input" autocomplete="off">
+                        <input type="text" name="item_description" maxlength="100" required="" id="id_item_description" class="ui-autocomplete-input" autocomplete="off">
                     </td>
                 </tr>
             </tbody>
