--- a/app/core/templates/core/inventorycounts/upcomingblends.html
+++ b/app/core/templates/core/inventorycounts/upcomingblends.html
@@ -78,17 +78,17 @@
         // https://stackoverflow.com/questions/1287592/get-checkbox-list-values-with-jquery
         $(document).ready(function() {
             $('#create_list').click(function() {
-                let partNumbers = [];
+                let itemCodes = [];
                 $('td input:checked').each(function() {
-                    partNumbers.push($(this).attr("name"));
+                    itemCodes.push($(this).attr("name"));
                 });
                 // https://stackoverflow.com/questions/4505871/good-way-to-serialize-a-list-javascript-ajax
-                let encodedPartNumbers = btoa(JSON.stringify(partNumbers));
+                let encodedItemCodes = btoa(JSON.stringify(itemCodes));
                 let dummyList = ["No_Item_Codes"];
                 let encodedDummyList = btoa(JSON.stringify(dummyList));
                 // https://stackoverflow.com/questions/503093/how-do-i-redirect-to-another-webpage
                 baseURL = window.location.href.split('core')[0];
-                window.location.replace(baseURL + "core/countlist/add/"+encodedPartNumbers+'/'+encodedDummyList)
+                window.location.replace(baseURL + "core/countlist/add/"+encodedItemCodes+'/'+encodedDummyList)
             });
         });
     </script>
