--- a/app/core/templates/core/reportcenter.html
+++ b/app/core/templates/core/reportcenter.html
@@ -37,7 +37,7 @@
                         </select>
                     </td>
                 </tr>
-                <tr id="partNumberRow">
+                <tr id="itemCodeRow">
                     <td>
                         <label for="id_item_code">Enter Part Number:</label>
                     </td>
