--- a/app/core/templates/core/reportcenter.html
+++ b/app/core/templates/core/reportcenter.html
@@ -45,7 +45,7 @@
                         <input type="text" name="item_code" maxlength="100" required="" id="id_item_code" class="ui-autocomplete-input" autocomplete="off">
                     </td>
                 </tr>
-                <tr id="partDescriptionRow">
+                <tr id="itemDescriptionRow">
                     <td>
                         <label for="id_item_description">Enter Description:</label>
                     </td>
