--- a/app/core/templates/core/blendschedules/horixschedule.html
+++ b/app/core/templates/core/blendschedules/horixschedule.html
@@ -23,13 +23,13 @@
                 <tr>
                     <td>{{ item.pn }}</td>
                     <td>{{ item.po_field }}</td>
-                    <td>{{ item.itemcode }}</td>
+                    <td>{{ item.item_code }}</td>
                     <td>{{ item.component_item_description }}</td>
                     <td>{{ item.gallonqty }}</td>
                     <td>{{ item.num_blends }}</td>
                     <td>{{ item.run_date|date:"M d, Y" }}</td>
                     <td class="text-center lotNumCell">
-                        <button class="btn btn-secondary lotNumButton" data-desk="{{ item.desk }}" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-line="Hx" data-rundate="{{ item.run_date|date:"m/d/Y" }}" data-partnum="{{ item.itemcode }}" data-desc="{{ item.component_item_description }}" data-threewkqty="{{ item.gallonqty }}">+</button>
+                        <button class="btn btn-secondary lotNumButton" data-desk="{{ item.desk }}" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-line="Hx" data-rundate="{{ item.run_date|date:"m/d/Y" }}" data-partnum="{{ item.item_code }}" data-desc="{{ item.component_item_description }}" data-threewkqty="{{ item.gallonqty }}">+</button>
                     </td>
                 </tr>
             {% endfor %}
