'item_pn'->'item_code'

--- a/app/core/templates/core/reports/chemshortagereport.html
+++ b/app/core/templates/core/reports/chemshortagereport.html
@@ -10,7 +10,7 @@
     {% else %}
         <div class='text-center'>
             <h1>All Run Shortages for Blends Containing:</h1>
-            <h2> {{ item_info.item_pn }} {{ item_info.item_desc }} </h2>
+            <h2> {{ item_info.item_code }} {{ item_info.item_description }} </h2>
         </div>
         <table class="table text-left table-bordered table-hover">
             <thead class="thead-dark">
