--- a/app/core/templates/core/blendschedules/allschedules.html
+++ b/app/core/templates/core/blendschedules/allschedules.html
@@ -37,7 +37,7 @@
                                 <td>{{ item.run_date|date:"M d, Y" }}</td>
                                 <td class="text-center lotNumCell">
 
-                                    <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-line="Hx" data-rundate="{{ item.run_date|date:"m/d/Y" }}" data-partnum="{{ item.item_code }}" data-desc="{{ item.component_item_description }}" data-desk="{{ item.desk }}" data-threewkqty="{{ item.gallonqty }}">+</button>
+                                    <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-line="Hx" data-rundate="{{ item.run_date|date:"m/d/Y" }}" data-itemcode="{{ item.item_code }}" data-desc="{{ item.component_item_description }}" data-desk="{{ item.desk }}" data-threewkqty="{{ item.gallonqty }}">+</button>
 
                                 </td>
                             </tr>
@@ -85,7 +85,7 @@
                             <td>{{ item.num_blends }}</td>
                             <td>{{ item.run_date|date:"M d, Y" }}</td>
                             <td class="text-center lotNumCell">
-                                <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-desk="{{ item.desk }}" data-bs-target="#addLotNumModal" data-line="Dm" data-rundate="{{ item.run_date }}" data-partnum="{{ item.item_code }}" data-desc="{{ item.component_item_description }}" data-threewkqty="{{ item.gallonqty }}">+</button>
+                                <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-desk="{{ item.desk }}" data-bs-target="#addLotNumModal" data-line="Dm" data-rundate="{{ item.run_date }}" data-itemcode="{{ item.item_code }}" data-desc="{{ item.component_item_description }}" data-threewkqty="{{ item.gallonqty }}">+</button>
                             </td>
                         </tr>
                     {% endfor %}
@@ -133,7 +133,7 @@
                             <td>{{ item.num_blends }}</td>
                             <td>{{ item.run_date|date:"M d, Y" }}</td>
                             <td class="text-center lotNumCell">
-                                <button class="btn btn-secondary lotNumButton" data-desk="{{ item.desk }}" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-line="Totes" data-rundate="{{ item.run_date }}" data-partnum="{{ item.item_code }}" data-desc="{{ item.component_item_description }}" data-threewkqty="{{ item.gallonqty }}">+</button>
+                                <button class="btn btn-secondary lotNumButton" data-desk="{{ item.desk }}" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-line="Totes" data-rundate="{{ item.run_date }}" data-itemcode="{{ item.item_code }}" data-desc="{{ item.component_item_description }}" data-threewkqty="{{ item.gallonqty }}">+</button>
                             </td>
                         </tr>
                     {% endfor %}
@@ -180,7 +180,7 @@
                                 <td>{{ item.num_blends }}</td>
                                 <td>{{ item.run_date|date:"M d, Y" }}</td>
                                 <td class="text-center lotNumCell">
-                                    <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-rundate="{{ item.run_date }}" data-line="Pails" data-partnum="{{ item.item_code }}" data-desc="{{ item.component_item_description }}" data-threewkqty="{{ item.gallonqty }}">+</button>
+                                    <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-rundate="{{ item.run_date }}" data-line="Pails" data-itemcode="{{ item.item_code }}" data-desc="{{ item.component_item_description }}" data-threewkqty="{{ item.gallonqty }}">+</button>
                                 </td>
                             </tr>
                         {% endfor %}
