--- a/app/core/templates/core/inventorycounts/upcomingblends.html
+++ b/app/core/templates/core/inventorycounts/upcomingblends.html
@@ -58,7 +58,7 @@
                                 {{ item.item_code }}
                             </div>
                         </td>
-                        <td>{{ item.itemdesc }}</td>
+                        <td>{{ item.item_description }}</td>
                         <td>{{ item.starttime|floatformat:2 }}</td>
                         <td>{{ item.expected_on_hand|floatformat:2 }}</td>
                         <td>{{ item.last_count_quantity|floatformat:0 }}: {{ item.last_count_date|date:"m-d-y" }}</td>
