'component_item_desc'->'component_item_description'

--- a/app/core/templates/core/chemshortages.html
+++ b/app/core/templates/core/chemshortages.html
@@ -35,7 +35,7 @@
                         <td style="vertical-align: middle;">{{ item.item_description }}</td>
                         <td style="vertical-align: middle;">{{ item.blend_req_threewk|floatformat:0 }} gal</td>
                         <td style="vertical-align: middle;">{{ item.component_item_code }}</td>
-                        <td style="vertical-align: middle;">{{ item.component_item_desc }}</td>
+                        <td style="vertical-align: middle;">{{ item.component_item_description }}</td>
                         <td style="vertical-align: middle;">{{ item.required_qty|floatformat:2 }} {{ item.standard_uom }}</td>
                         <td style="vertical-align: middle;">{{ item.qtyonhand|floatformat:2 }} {{ item.standard_uom }}</td>
                         <td style="vertical-align: middle;">{{ item.oh_minus_required|floatformat:2 }}</td>
@@ -85,7 +85,7 @@
                         <td style="vertical-align: middle;">{{ item.item_description }}</td>
                         <td style="vertical-align: middle;">{{ item.blend_req_threewk|floatformat:0 }} gal</td>
                         <td style="vertical-align: middle;">{{ item.component_item_code }}</td>
-                        <td style="vertical-align: middle;">{{ item.component_item_desc }}</td>
+                        <td style="vertical-align: middle;">{{ item.component_item_description }}</td>
                         <td style="vertical-align: middle;">{{ item.required_qty|floatformat:2 }} {{ item.standard_uom }}</td>
                         <td style="vertical-align: middle;">{{ item.qtyonhand|floatformat:2 }} {{ item.standard_uom }}</td>
                         <td style="vertical-align: middle;">{{ item.oh_minus_required|floatformat:2 }} {{ item.standard_uom }}</td>
