--- a/app/core/templates/core/blendsheet.html
+++ b/app/core/templates/core/blendsheet.html
@@ -42,7 +42,7 @@
     {% for ingredient in ingredients %}
     <tr> 
         <td>{{ ingredient.component_item_code }}</td>
-        <td>{{ ingredient.component_item_desc }}</td>
+        <td>{{ ingredient.component_item_description }}</td>
         <td>{{ ingredient.qtyreq|floatformat:2 }}</td>
         {% comment %} <td>{{ ingredient.standard_uom }}</td> {% endcomment %}
         <td>{{ ingredient.area }}</td>
